# fast-nix-gc

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: darwin-module.yaml
alloy/: gc_db_consistency.als
benches/: gc_bench.rs
crates/common/: Cargo.toml
crates/common/src/: db.rs  lib.rs  logging.rs  nix_config.rs  temp_roots.rs
crates/gc/: Cargo.toml
crates/gc/benches/: gc_bench.rs
crates/gc/src/: gc.rs  gc_socket.rs  lib.rs  main.rs  profiles.rs  roots.rs
crates/gc/tests/: integration.rs  schema.sql  socket_concurrency.rs
crates/optimise/: Cargo.toml
crates/optimise/benches/: optimise_bench.rs
crates/optimise/src/: hash.rs  main.rs  optimise.rs
difftest/: Cargo.toml
difftest/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: gc_graph.rs
nix/: darwin-module.nix  darwin-test.nix  module.nix  nixos-test.nix  package.nix  proptest.nix  service-options.nix  shell.nix  treefmt.nix
proptest/: Cargo.toml  proptest_gc.rs
scripts/: check-alloy.py  compare-dry-run.py  mkstore.py  wait-for-buildbot.sh
src/: db.rs  gc.rs  lib.rs  main.rs  profiles.rs  roots.rs
tests/: integration.rs  proptest_gc.proptest-regressions  proptest_gc.rs
