[workspace]
members = ["proptest"]

[package]
name = "fast-nix-gc"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-args = "0.5"
rayon = "1"
walkdir = "2"
anyhow = "1"
nix = { version = "0.31", features = ["fs", "user", "dir", "mount"] }
log = { version = "0.4", features = ["std"] }
rusqlite = "0.39"
foldhash = "0.2"

[dev-dependencies]
tempfile = "3"
rusqlite = "0.39"

[[bench]]
name = "gc_bench"
harness = false

[profile.release]

[profile.profiling]
inherits = "release"
debug = true
strip = false

