[workspace]
resolver = "3"
members = ["crates/common", "crates/gc", "crates/optimise", "proptest"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
fast-nix-common = { path = "crates/common" }
fast-nix-gc = { path = "crates/gc" }
pico-args = "0.5"
rayon = "1"
walkdir = "2"
anyhow = "1"
nix = { version = "0.31", features = ["fs", "user", "dir", "mount"] }
log = { version = "0.4", features = ["std"] }
rusqlite = "0.39"
foldhash = "0.2"
tempfile = "3"

[profile.release]

[profile.profiling]
inherits = "release"
debug = true
strip = false
