[workspace]
resolver = "3"
members = ["crates/common", "crates/gc", "crates/optimise", "proptest"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
fast-nix-common = { path = "crates/common" }
fast-nix-gc = { path = "crates/gc" }
pico-args = "0.5"
rayon = "1"
walkdir = "2"
anyhow = "1"
nix = { version = "0.31", features = ["fs", "user", "dir", "mount", "sched", "socket", "poll"] }
log = { version = "0.4", features = ["std"] }
rusqlite = "0.39"
foldhash = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
futures-util = "0.3"
harmonia-file-nar = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a" }
harmonia-utils-hash = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a" }
harmonia-store-core = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a", default-features = false }
harmonia-store-db = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a" }

# harmonia crates declare intra-workspace deps as bare version reqs;
# patch them to the same git rev so cargo can resolve them outside
# that workspace.
[patch.crates-io]
harmonia-file-core           = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a" }
harmonia-utils-io            = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a" }
harmonia-utils-base-encoding = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a" }
harmonia-store-path-info     = { git = "https://github.com/nix-community/harmonia", rev = "9789e1d0a322360442ff2a2a150f8bd2b9ccf93a" }

[profile.release]

[profile.profiling]
inherits = "release"
debug = true
strip = false
