[package]
name = "fast-nix-optimise"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fast-nix-optimise"
path = "src/main.rs"

[dependencies]
fast-nix-common.workspace = true
anyhow.workspace = true
log.workspace = true
pico-args.workspace = true
nix.workspace = true
walkdir.workspace = true
foldhash.workspace = true
tokio.workspace = true
futures-util.workspace = true
harmonia-nar.workspace = true
harmonia-utils-hash.workspace = true

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
